media/libcubeb/update.sh
@@ -57,3 +57,5 @@ else
   echo "Remember to update README_MOZILLA with the version details."
 fi
 
+patch -p3 < bug1278612.patch
+
